--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="shortcut icon"
-      href="../Images/favicon.ico"
+      href="Images/favicon.ico"
       type="image/x-icon"
     />
   </head>
   <body>
     <div class="top-container">
-      <img src="images/cloud.png" class="cloud1" alt="" />
-      <img src="images/mountain.png" class="Mount" alt="" />
+      <img src="Images/cloud.png" class="cloud1" alt="" />
+      <img src="Images/mountain.png" class="Mount" alt="" />
       <h1 class="Name">Ashokraj K</h1>
       <p class="sub">Web Developer</p>
-      <img src="images/cloud.png" class="cloud2" alt="" />
+      <img src="Images/cloud.png" class="cloud2" alt="" />
     </div>
     <div class="mid-container"></div>
     <div class="btm-container"></div>
